Fixed parameters text-alignment and applied dark style to inputs

--- a/style/css/app.css
+++ b/style/css/app.css
@@ -1071,8 +1071,7 @@ input.dark[type=checkbox]:checked + label {
 
 /* End Swatch */
 /* Text Field */
-.text-field, .config-panel .config-row input[type='text'],
-.config-panel .config-row input[type='number'] {
+.text-field {
   border: 1px solid #a5a8a8;
   box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1);
   color: #000;
@@ -1087,47 +1086,43 @@ input.dark[type=checkbox]:checked + label {
   padding: 0 4px;
   min-width: 150px; }
 
-.text-field.large, .config-panel .config-row input.large[type='text'],
-.config-panel .config-row input.large[type='number'] {
+.text-field.large {
   font-size: 14px;
   padding: 1px 4px 0 4px;
   height: 27px; }
 
-.text-field.dark, .config-panel .config-row input.dark[type='text'],
-.config-panel .config-row input.dark[type='number'] {
+.text-field.dark, .config-panel .config-row input[type='text'],
+.config-panel .config-row input[type='number'] {
   background: rgba(255, 255, 255, 0.15);
   border: 1px solid rgba(0, 0, 0, 0.7);
   color: #fff; }
 
 /* Error state before Focus state on purpose */
-.text-field.error, .config-panel .config-row input.error[type='text'],
+.text-field.error {
+  border: 1px solid #ea015e;
+  -webkit-box-shadow: 0 0 4px #ff0078;
+  box-shadow: 0 0 4px #ff0078, inset 0px 1px 0px rgba(0, 0, 0, 0.15); }
+
+.text-field.dark.error, .config-panel .config-row input.error[type='text'],
 .config-panel .config-row input.error[type='number'] {
   border: 1px solid #ea015e;
   -webkit-box-shadow: 0 0 4px #ff0078;
   box-shadow: 0 0 4px #ff0078, inset 0px 1px 0px rgba(0, 0, 0, 0.15); }
 
-.text-field.dark.error, .config-panel .config-row input.dark.error[type='text'],
-.config-panel .config-row input.dark.error[type='number'] {
-  border: 1px solid #ea015e;
-  -webkit-box-shadow: 0 0 4px #ff0078;
-  box-shadow: 0 0 4px #ff0078, inset 0px 1px 0px rgba(0, 0, 0, 0.15); }
-
-.text-field:focus, .config-panel .config-row input[type='text']:focus,
-.config-panel .config-row input[type='number']:focus {
+.text-field:focus {
   border: 1px solid #0940fd;
   -webkit-box-shadow: 0 0 4px #0088ff;
   box-shadow: 0 0 4px #0088ff;
   outline: none; }
 
-.text-field.dark:focus, .config-panel .config-row input.dark[type='text']:focus,
-.config-panel .config-row input.dark[type='number']:focus {
+.text-field.dark:focus, .config-panel .config-row input[type='text']:focus,
+.config-panel .config-row input[type='number']:focus {
   border: 1px solid #000;
   -webkit-box-shadow: 0 0 4px #222;
   box-shadow: 0 0 4px #222;
   outline: none; }
 
-.text-field[disabled=disabled], .config-panel .config-row input[disabled=disabled][type='text'],
-.config-panel .config-row input[disabled=disabled][type='number'] {
+.text-field[disabled=disabled] {
   opacity: 0.6; }
 
 /* End Text Field */
@@ -1796,7 +1791,8 @@ pre,
     -ms-box-flex: 1;
     -o-box-flex: 1;
     box-flex: 1;
-    background: rgba(255, 255, 255, 0.05); }
+    background: rgba(255, 255, 255, 0.05);
+    text-align: left; }
   .config-panel .config-parameters-wrapper {
     display: -webkit-box;
     display: -moz-box;
@@ -1815,7 +1811,11 @@ pre,
     -moz-flex-direction: column;
     -ms-flex-direction: column;
     -o-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    text-align: left; }
+    .config-panel .config-parameters-wrapper h4 {
+      font-weight: normal;
+      text-shadow: 0 -1px 0 black; }
   .config-panel .config-parameters {
     -webkit-flex: 1;
     -moz-flex: 1;
